--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.0.0 || ^9.0.0-0",
+    "@angular/cdk": "8.0.2",
     "@angular/common": "8.1.0",
     "@angular/compiler": "8.1.0",
     "@angular/core": "8.1.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "8.1.0",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "8.1.0",
     "@angular/platform-browser-dynamic": "8.1.0",
     "@angular/router": "8.1.0",
     "core-js": "2.6.9",
-    "material": "0.3.13",
+    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "rxjs": "6.5.2",
     "zone.js": "0.9.1"
