--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@angular/material": "^8.0.2",
     "@angular/platform-browser": "8.1.0",
     "@angular/platform-browser-dynamic": "8.1.0",
-    "@angular/router": "8.1.0",
+    "@angular/router": "^8.1.1",
     "core-js": "2.6.9",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
